@@ -6,17 +6,8 @@ import Room.*;
 
 public class Student extends Player {
 
-    private enum TransistorState {
-        Inactive,
-        Paired,
-        Deployed
-    }
-
-    private TransistorState transistorState;
-
     public Student(Room startRoom) {
         super(startRoom);
-        transistorState = TransistorState.Inactive;
     }
 
     @Override
@@ -80,7 +71,7 @@ public class Student extends Player {
 
         if( !this.items.isEmpty() ){
 
-            Item firstItem = this.items.remove(0);
+            Item firstItem = this.items.removeFirst();
 
             // Add the removed item to the room
             this.room.AddItem(firstItem);
@@ -89,56 +80,85 @@ public class Student extends Player {
         Logger.logExit(this.getClass().getName(), "DropItem");
     }
 
-    public void PairTransistor(){
+//    public void PairTransistor(){
+//
+//        Logger.logEntry(this.getClass().getName(), "PairTransistor", "");
+//
+//        for(Item i: this.items){
+//            if(i.Pair(this)) {
+//                transistorState = TransistorState.Paired;
+//                break;
+//            }
+//        }
+//
+//        Logger.logExit(this.getClass().getName(), "PairTransistor", "");
+//    }
 
-        Logger.logEntry(this.getClass().getName(), "PairTransistor", "");
+//    public void UseTransistor(){
+//
+//        Logger.logEntry(this.getClass().getName(), "UseTransistor", "");
+//
+//        for(Item i: this.items){
+//            if(i.Teleport(this)){
+//                return;
+//            }
+//        }
+//
+//        Logger.logExit(this.getClass().getName(), "UseTransistor" );
+//    }
 
-        for(Item i: this.items){
-            if(i.Pair(this)) {
-                transistorState = TransistorState.Paired;
-                break;
-            }
-        }
-
-        Logger.logExit(this.getClass().getName(), "PairTransistor", "");
-    }
-
-    public void UseTransistor(){
-
-        Logger.logEntry(this.getClass().getName(), "UseTransistor", "");
-
-        for(Item i: this.items){
-            if(i.Teleport(this)){
-                return;
-            }
-        }
-
-        Logger.logExit(this.getClass().getName(), "UseTransistor" );
-    }
-
-    public void DeployTransistor(){
-
-        Logger.logEntry(this.getClass().getName(), "DeployTransistor", "");
-
-        for(Item i: this.items){
-            if(i.Deploy(this)){
-                transistorState = TransistorState.Deployed;
-                break;
-            }
-        }
-
-        Logger.logExit(this.getClass().getName(), "DeployTransistor");
-    }
+//    public void DeployTransistor(){
+//
+//        Logger.logEntry(this.getClass().getName(), "DeployTransistor", "");
+//
+////        for(Item i: this.items){
+////            if(i.Deploy(this)){
+////                transistorState = TransistorState.Deployed;
+////                break;
+////            }
+////        }
+//
+//        Logger.logExit(this.getClass().getName(), "DeployTransistor");
+//    }
 
     public void Transistor(){
 
         Logger.logEntry(this.getClass().getName(), "Transistor", "");
 
-        if(transistorState == TransistorState.Inactive)
-            PairTransistor();
-        else if(transistorState == TransistorState.Paired)
-            DeployTransistor();
-        else UseTransistor();
+        for ( Item item : this.GetInventory() ) {
+            //after the first use of the transistor we return, because we don't want to use the second one too. Only one at a time.
+            if ( item.UseTransistor(this) ) {
+                Logger.logExit(this.getClass().getName(), "Transistor");
+                return;
+            }
+        }
+
+        //Honnan tudjuk, hogy párosítva van két tranzisztor?
+        // -> Onnan, hogy a transistorban a pair az nem null;
+
+        //Honnan tudjuk, hogy le van rakva az egyik párja a transistornak?
+        // -> Onnan, hogy a pair transistor roomja nem null;
+
+        /*
+        * Alap állapot: Felveszünk egy tranzisztort.
+        * Megnyomjuk a player transistor gombját, nem történik semmi
+        *
+        * Felveszünk egy másik tranzisztort.
+        * Megnyomjuk a player transistor gombját:
+        * a) Ha az a transistor, amelyik elso a listaban, nincsen neki parja, akkor vegigmegyunk a listan es megnezzuk, hogy van-e olyan tranzisztor, amelyiknek nincs parja, es ha van van meghivjuk rajta a pair fuggvenyt.
+        *   Ekkor ha nincs másik transistor az inventoryban, akkor nem fog tortenni semmi
+        * b) Mostmár párosítva vannak a transistorok. Most a következő gombnyomásnál megnézzük, hogy a nálunk lévő transistorok közül van e room beallitva valakinek.
+        *   Ha nincs, akkor meghivjuk a deploy fuggvenyt, ami a roomban lévő tranzisztort deployolja.
+        * c) Ha idáig eljutottunk, akkor a következő gombnyomásnál meghivjuk a use fuggvenyt, ami teleportálja a playert.
+        *
+        * */
+
+
+//        if(transistorState == TransistorState.Inactive)
+//            PairTransistor();
+//        else if(transistorState == TransistorState.Paired)
+//            DeployTransistor();
+//        else UseTransistor();
 
         Logger.logExit(this.getClass().getName(), "Transistor");
     }
